fixed my li being overlapping

--- a/public/styles/index/module.css
+++ b/public/styles/index/module.css
@@ -337,6 +337,7 @@ h2 {
         border: none;
         padding: 5px;
         right: 5%;
+        font-size: 1em;
         position: absolute;
     }
 
